<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="60dp"
        android:weightSum="9"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="80dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:paddingBottom="30dp"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_weight="1"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/newGameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_new_game_name"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/freeGameButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_free_game_name"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/settingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_settings_name"
                android:layout_gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/aboutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_about_name"
                android:layout_gravity="center"/>
        </FrameLayout>









    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>